--- a/deploy/everoute.yaml
+++ b/deploy/everoute.yaml
@@ -179,7 +179,7 @@ spec:
                 type: object
               endpointSelector:
                 description: "EndpointSelector selects endpoints. This field follows
-                  standard label selector semantics; if present but empty, it selects
+                  extend label selector semantics; if present but empty, it selects
                   all endpoints. \n If NamespaceSelector is set, then the EndpointGroup
                   would select the endpoints matching EndpointSelector in the Namespaces
                   selected by NamespaceSelector. If Namespace is set, then the EndpointGroup
@@ -187,6 +187,15 @@ spec:
                   Namespace. If neither of NamespaceSelector or Namespace set, then
                   the EndpointGroup would select the endpoints in all namespaces."
                 properties:
+                  extendMatchLabels:
+                    additionalProperties:
+                      items:
+                        type: string
+                      type: array
+                    description: 'ExtendMatchLabels allows match labels with the same
+                      key but different value. e.g. {key: [value1, value2]} matches
+                      labels: {key: value1, key: value2}'
+                    type: object
                   matchExpressions:
                     description: matchExpressions is a list of label selector requirements.
                       The requirements are ANDed.
@@ -554,16 +563,16 @@ spec:
   versions:
   - additionalPrinterColumns:
     - jsonPath: .spec.reference.externalIDName
-      name: ExternalName
+      name: EXTERNAL-NAME
       type: string
     - jsonPath: .spec.reference.externalIDValue
-      name: ExternalValue
+      name: EXTERNAL-VALUE
       type: string
     - jsonPath: .status.ips
-      name: IPAddr
+      name: IPADDR
       type: string
-    - jsonPath: .status.macAddress
-      name: MAC
+    - jsonPath: .spec.extendLabels
+      name: EXTEND-LABELS
       type: string
     name: v1alpha1
     schema:
@@ -587,6 +596,16 @@ spec:
           spec:
             description: Spec contains description of the endpoint
             properties:
+              extendLabels:
+                additionalProperties:
+                  items:
+                    type: string
+                  type: array
+                description: ExtendLabels contains extend labels of endpoint. Each
+                  key in the labels could have multiple values, but at least one should
+                  be specified. The ExtendLabels could be selected by selector in
+                  SecurityPolicy or EndpointGroup.
+                type: object
               reference:
                 description: Reference of an endpoint, also the external_id of an
                   ovs interface. We map between endpoint and ovs interface use the
@@ -778,13 +797,21 @@ spec:
                       type: string
                     endpointSelector:
                       description: "EndpointSelector selects endpoints. This field
-                        follows standard label selector semantics; if present but
-                        empty, it selects all endpoints. \n If EndpointSelector is
-                        set, then the SecurityPolicy would apply to the endpoints
-                        matching EndpointSelector in the SecurityPolicy Namespace.
-                        If this field is set then neither of the other fields can
-                        be."
+                        follows extend label selector semantics; if present but empty,
+                        it selects all endpoints. \n If EndpointSelector is set, then
+                        the SecurityPolicy would apply to the endpoints matching EndpointSelector
+                        in the SecurityPolicy Namespace. If this field is set then
+                        neither of the other fields can be."
                       properties:
+                        extendMatchLabels:
+                          additionalProperties:
+                            items:
+                              type: string
+                            type: array
+                          description: 'ExtendMatchLabels allows match labels with
+                            the same key but different value. e.g. {key: [value1,
+                            value2]} matches labels: {key: value1, key: value2}'
+                          type: object
                         matchExpressions:
                           description: matchExpressions is a list of label selector
                             requirements. The requirements are ANDed.
@@ -878,13 +905,23 @@ spec:
                             type: object
                           endpointSelector:
                             description: "EndpointSelector selects endpoints. This
-                              field follows standard label selector semantics; if
-                              present but empty, it selects all endpoints. \n If NamespaceSelector
+                              field follows extend label selector semantics; if present
+                              but empty, it selects all endpoints. \n If NamespaceSelector
                               is also set, then the Rule would select the endpoints
                               matching EndpointSelector in the Namespaces selected
                               by NamespaceSelector. Otherwise, it selects the Endpoints
                               matching EndpointSelector in the policy's own Namespace."
                             properties:
+                              extendMatchLabels:
+                                additionalProperties:
+                                  items:
+                                    type: string
+                                  type: array
+                                description: 'ExtendMatchLabels allows match labels
+                                  with the same key but different value. e.g. {key:
+                                  [value1, value2]} matches labels: {key: value1,
+                                  key: value2}'
+                                type: object
                               matchExpressions:
                                 description: matchExpressions is a list of label selector
                                   requirements. The requirements are ANDed.
@@ -1071,13 +1108,23 @@ spec:
                             type: object
                           endpointSelector:
                             description: "EndpointSelector selects endpoints. This
-                              field follows standard label selector semantics; if
-                              present but empty, it selects all endpoints. \n If NamespaceSelector
+                              field follows extend label selector semantics; if present
+                              but empty, it selects all endpoints. \n If NamespaceSelector
                               is also set, then the Rule would select the endpoints
                               matching EndpointSelector in the Namespaces selected
                               by NamespaceSelector. Otherwise, it selects the Endpoints
                               matching EndpointSelector in the policy's own Namespace."
                             properties:
+                              extendMatchLabels:
+                                additionalProperties:
+                                  items:
+                                    type: string
+                                  type: array
+                                description: 'ExtendMatchLabels allows match labels
+                                  with the same key but different value. e.g. {key:
+                                  [value1, value2]} matches labels: {key: value1,
+                                  key: value2}'
+                                type: object
                               matchExpressions:
                                 description: matchExpressions is a list of label selector
                                   requirements. The requirements are ANDed.
@@ -1239,13 +1286,23 @@ spec:
                             type: object
                           endpointSelector:
                             description: "EndpointSelector selects endpoints. This
-                              field follows standard label selector semantics; if
-                              present but empty, it selects all endpoints. \n If NamespaceSelector
+                              field follows extend label selector semantics; if present
+                              but empty, it selects all endpoints. \n If NamespaceSelector
                               is also set, then the Rule would select the endpoints
                               matching EndpointSelector in the Namespaces selected
                               by NamespaceSelector. Otherwise, it selects the Endpoints
                               matching EndpointSelector in the policy's own Namespace."
                             properties:
+                              extendMatchLabels:
+                                additionalProperties:
+                                  items:
+                                    type: string
+                                  type: array
+                                description: 'ExtendMatchLabels allows match labels
+                                  with the same key but different value. e.g. {key:
+                                  [value1, value2]} matches labels: {key: value1,
+                                  key: value2}'
+                                type: object
                               matchExpressions:
                                 description: matchExpressions is a list of label selector
                                   requirements. The requirements are ANDed.
@@ -1432,13 +1489,23 @@ spec:
                             type: object
                           endpointSelector:
                             description: "EndpointSelector selects endpoints. This
-                              field follows standard label selector semantics; if
-                              present but empty, it selects all endpoints. \n If NamespaceSelector
+                              field follows extend label selector semantics; if present
+                              but empty, it selects all endpoints. \n If NamespaceSelector
                               is also set, then the Rule would select the endpoints
                               matching EndpointSelector in the Namespaces selected
                               by NamespaceSelector. Otherwise, it selects the Endpoints
                               matching EndpointSelector in the policy's own Namespace."
                             properties:
+                              extendMatchLabels:
+                                additionalProperties:
+                                  items:
+                                    type: string
+                                  type: array
+                                description: 'ExtendMatchLabels allows match labels
+                                  with the same key but different value. e.g. {key:
+                                  [value1, value2]} matches labels: {key: value1,
+                                  key: value2}'
+                                type: object
                               matchExpressions:
                                 description: matchExpressions is a list of label selector
                                   requirements. The requirements are ANDed.
