--- a/deploy/everoute-agent/agent.yaml
+++ b/deploy/everoute-agent/agent.yaml
@@ -87,6 +87,13 @@ spec:
               readOnly: true
             - name: tmp
               mountPath: /tmp
+          readinessProbe:
+            exec:
+              command: ["/usr/share/openvswitch/scripts/ovs-ctl", "status"]
+            initialDelaySeconds: 5
+            periodSeconds: 10
+            successThreshold: 1
+            failureThreshold: 3
         - name: everoute-agent
           image: everoute/release
           imagePullPolicy: IfNotPresent
@@ -94,6 +101,7 @@ spec:
           args:
             - --enable-cni=true
             - -v=0
+            - --metrics-addr=127.0.0.1:30002
           env:
             - name: NODE_NAME
               valueFrom:
@@ -101,6 +109,15 @@ spec:
                   fieldPath: spec.nodeName
           securityContext:
             privileged: true
+          readinessProbe:
+            httpGet:
+              host: 127.0.0.1
+              port: 30002
+              path: /metrics
+            initialDelaySeconds: 5
+            periodSeconds: 10
+            successThreshold: 1
+            failureThreshold: 3
           volumeMounts:
             - name: everoute-agent
               mountPath: /var/lib/everoute/
