--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -2,10 +2,10 @@ name: ci
 
 on:
   pull_request:
-    branches: [ main ]
+    branches: [ main, release-1.0 ]
 
   push:
-    branches: [ main ]
+    branches: [ main, release-1.0 ]
 
   schedule:
     # 7:00 UTC+8
